{
    "name": "InputActions",
    "maps": [
        {
            "name": "BasicMovement",
            "id": "62b2df6c-d6dc-4b6a-88d9-3bf0617470a4",
            "actions": [
                {
                    "name": "UpDwon",
                    "type": "Value",
                    "id": "441c0d6c-f44e-4439-8dcc-4d1ada88e9eb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftRight",
                    "type": "Value",
                    "id": "45659f4f-d339-4451-ba7d-32f72e9eb190",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b126c274-08f2-4499-bd8a-46421aad5c72",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDwon",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "14458c91-214a-4555-a9fc-0a6e6f3890cf",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDwon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8852024b-9145-4666-91d2-cd82baab54d0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDwon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d2c5478d-2a18-411f-abd5-ddf495eda8ea",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "15ee6757-31fe-480b-881b-1230cf35f85b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2ba16d5f-d04b-4473-b700-4ff1f9a020d9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}